<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/app.com.ark.android.sunshine"
    android:layout_width = "match_parent"
    android:layout_height="match_parent">

    <app.com.ark.android.sunshine.LocationEditTextPreference
        android:key = "@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:entries="@array/Units"
        android:entryValues="@array/Units"
        android:defaultValue="@string/pref_units_default"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>